--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.6
 contourpy==1.1.0
 cycler==0.11.0
 Flask==2.3.2
+Flask-Cors==4.0.0
 fonttools==4.41.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
